Added space inabout. made order correction in card

--- a/src/components/RegistrationPage/RegistrationMain/RegistrationMain.module.scss
+++ b/src/components/RegistrationPage/RegistrationMain/RegistrationMain.module.scss
@@ -18,7 +18,7 @@
     flex-direction: column;
   }
   
-  &__imgContainer {
+  &__profileImgContainer {
     position: relative;
     width: 166px;
     height: 166px;
@@ -27,10 +27,10 @@
     align-items: center;  
     background: linear-gradient(90deg, rgba(109, 255, 96, 0.1) 0%, rgba(86, 164, 227, 0.1) 100%);
     background-repeat: no-repeat;  
-    border-radius: 50%; // Ensures it's circular
+    border-radius: 50%; 
   }
   
-  &__img {
+  &__profileImg {
     width: 94px;
     height: 94px;
     border-radius: 50%;
@@ -104,11 +104,10 @@
 
     @include setFont(14px, 500, $color-grey04);
     color: $color-grey04;
-
     
     &:not(:has(option:checked[value=""])) {
       @include setFont(14px, 500, $color-black);
-    }       
+    } 
     
   }
 
@@ -125,15 +124,6 @@
     background-repeat: no-repeat;
     pointer-events: none;
   }
-}
-
-
-
-&__test {
-  color: red;
-  position: absolute;
-  top: 12px;
-  left: 125px;
 }
 
  &__consentCheckbox {        
@@ -169,44 +159,5 @@
 
   &__consentText {
     @include setFont(12px, 500, $color-black, $font-familySecondary);  
-  }
-  
-
-  /*
-  input[type="checkbox"] {
-    //appearance: none;
-   // width: 20px;
-   // height: 20px;
-   // border: 1px solid $color-black01;
-   // border-radius: 4px;
-    background: $color-black03;
-    position: relative;
-    cursor: pointer;
-    color:red;
-    
-    &:checked {
-      //background-color: $color-green; // Checkbox background when checked
-  
-      &::after {
-        content: "";
-        width: 14px;
-        height: 14px;
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        
-        // Apply the SVG sprite icon
-       // background-color: white; // Color of the checkmark
-        mask: url("../../../assets/svg/sprite.svg#check") no-repeat center;
-        mask-size: contain;
-      }
-    }
-  } */
-  
-
-
-
-
-  
+  }    
 }
