--- a/src/components/SearchPage/SearchMain/SearchMain.module.scss
+++ b/src/components/SearchPage/SearchMain/SearchMain.module.scss
@@ -11,7 +11,7 @@
   }
 
   &__btnGgradient {   
-    @include setFont(13px, 700, $color-white);   
+    @include setFont(14px, 700, $color-white);   
     background: linear-gradient(90deg, #009ddf 0%, #01d44a 50%, #9dcf00 100%);
     border-radius: 8px;   
     padding: 13px 11px;
@@ -22,12 +22,13 @@
     }
   }
 
-  &__btnCategory {
-    @include setFont(13px, 600);
+  &__btnCategory {  
+    @include setFont(14px, 600, $color-black, $font-familySecondary); 
     background-color: $color-white;
     border-radius: 8px;
-    padding: 13px 11px;
-    
+    box-shadow: 0px 13px 13px 0px #00000005;
+    padding: 12px 11px;  
+
     &:hover, &:active {     
       background-color: #E7E7E7;
       cursor: pointer;
