--- a/src/components/SinglePage/SingleMain/SingleMain.module.scss
+++ b/src/components/SinglePage/SingleMain/SingleMain.module.scss
@@ -11,16 +11,18 @@
 
   &__columns {    
     columns: 2;
-    gap: 11px;       
-       
+    gap: 11px;     
     padding-left: 12px;
     padding-right: 12px;
   }
 
   &__card {
-    padding-bottom: 11px;
-    break-inside: avoid;
     display: block;
-    cursor: default;
-  }
+    break-inside: avoid;    
+    cursor: default;   
+    box-shadow: 0px 13px 13px 0px #00000005;   
+    padding-bottom: 11px;    
+  }  
+
 }
+
