--- a/src/components/global/Card/Card.module.scss
+++ b/src/components/global/Card/Card.module.scss
@@ -4,9 +4,11 @@
 .card {
   max-width: 231px;
   width: 100%;
+  min-height: 310px;
   background-color: $color-white;
   border-radius: 12px;  
-  padding: 6px;
+  box-shadow: 0px 13px 13px 0px #00000005;
+  padding: 6px;  
 
   &__title {
     @include setFont(14px, 600,);   
@@ -105,27 +107,17 @@
     background-image: url("../../../assets/images/icons/location.svg");     
   }
 
-  &__dateTime {
-    order: 0;
-  }
-
-  &__location {    
-    order: 1;
-  }
-
-  &__categpryName {
-    font-weight: bold;
-    order: 2;
-  }
- 
-
-
-
-
-  &__swiper {
-    .swiper-slide {
-       width: 180px !important;
-       background-color: lightblue !important;  
+  &__singleOrder {
+    .card__dateTime {
+      order: 0;
     }
- }   
-}
+
+    .card__location {
+      order: 1;
+    }
+
+    .card__categpryName {
+      order: 2;     
+    }
+  }
+} 
