--- a/src/components/RegistrationPage/RegistrationMain/RegistrationMain.module.scss
+++ b/src/components/RegistrationPage/RegistrationMain/RegistrationMain.module.scss
@@ -65,7 +65,7 @@
     padding: 24px 0 36px;
   }
 
-  input[type="text"] {
+  &__inputField {
     width: 100%;
     height: 46px;
     @include setFont(14px, 500, $color-black);
@@ -107,8 +107,7 @@
     
     &:not(:has(option:checked[value=""])) {
       @include setFont(14px, 500, $color-black);
-    } 
-    
+    }     
   }
 
   &::after {
@@ -160,4 +159,31 @@
   &__consentText {
     @include setFont(12px, 500, $color-black, $font-familySecondary);  
   }    
+
+  &__inputWrapper {
+    position: relative;
+    width: 100%;
+  }
+
+  &__placeholder {
+    position: absolute;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: $color-grey04;
+    transition: 0.2s ease;
+    pointer-events: none;
+    font-size: 14px;
+    font-weight: 500;
+
+    span {
+      color: $color-red;
+    }
+  }
+
+  .hide {
+    opacity: 0;
+    transform: translateY(-4px);
+    visibility: hidden;
+  }
 }
