--- a/src/components/CategoriesPage/CategoriesMain/CategoriesMain.module.scss
+++ b/src/components/CategoriesPage/CategoriesMain/CategoriesMain.module.scss
@@ -42,6 +42,12 @@
     width: 100%;
     max-width: 56%;
     transition: $transition;
+
+    &_half {
+      position: absolute;
+      bottom: 0;
+      max-width: 63%;
+    }
   }
 
   &__categoryImgContainer {
