--- a/src/components/RegistrationPage/RegistrationMain/RegistrationMain.module.scss
+++ b/src/components/RegistrationPage/RegistrationMain/RegistrationMain.module.scss
@@ -1,11 +1,10 @@
 @import "../../../styles/mixins";
 @import "../../../styles/vars";
 
-.registrationMain {  
-
+.registrationMain {
   @include bgWebp(
     "../assets/images/registration/registrationBg.png",
-    "../assets/images/registration/registrationBg.webp",
+    "../assets/images/registration/registrationBg.webp"
   );
   background-repeat: no-repeat;
   background-position: top center;
@@ -17,26 +16,30 @@
     @include flexCol();
     flex-direction: column;
   }
-  
+
   &__profileImgContainer {
     position: relative;
     width: 166px;
     height: 166px;
     display: flex;
     justify-content: center;
-    align-items: center;  
-    background: linear-gradient(90deg, rgba(109, 255, 96, 0.1) 0%, rgba(86, 164, 227, 0.1) 100%);
-    background-repeat: no-repeat;  
-    border-radius: 50%; 
+    align-items: center;
+    background: linear-gradient(
+      90deg,
+      rgba(109, 255, 96, 0.1) 0%,
+      rgba(86, 164, 227, 0.1) 100%
+    );
+    background-repeat: no-repeat;
+    border-radius: 50%;
   }
-  
+
   &__profileImg {
     width: 94px;
     height: 94px;
     border-radius: 50%;
     transition: $transition;
   }
-    
+
   &__cameraIconBg {
     @include flexCol();
     position: absolute;
@@ -45,17 +48,32 @@
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background: linear-gradient(138.37deg, #009DDF 14.8%, #01D44A 50.34%, #9DCF00 85.88%);
-    cursor: pointer;    
+    background: linear-gradient(
+      138.37deg,
+      #009ddf 14.8%,
+      #01d44a 50.34%,
+      #9dcf00 85.88%
+    );
+    cursor: pointer;
 
-    &:hover, &:active {
-      background: linear-gradient(138.37deg, #01D44A 14.8%, #009DDF 50.34%, #9DCF00 85.88%);
+    &:hover,
+    &:active {
+      background: linear-gradient(
+        138.37deg,
+        #01d44a 14.8%,
+        #009ddf 50.34%,
+        #9dcf00 85.88%
+      );
     }
   }
-  
+
   &__cameraIcon {
-    @include svg(26px, $color-white);  
-    cursor: pointer;   
+    @include svg(26px, $color-white);
+    cursor: pointer;
+  }
+
+  &__registrationText {
+    margin-top: 10px;
   }
 
   &__registrationContainer {
@@ -65,125 +83,131 @@
     padding: 24px 0 36px;
   }
 
-  &__inputField {
-    width: 100%;
-    height: 46px;
-    @include setFont(14px, 500, $color-black);
-    background: $color-black03;
-    border: none;
-    outline: none;
-    border-radius: 10px;
-    caret-color: $color-black;
-    padding: 16px;
-  
-    &::placeholder {
+  &__selectWrapper {
+    position: relative;
+
+    select {
+      width: 100%;
+      height: 46px;
+      padding: 12px 40px 12px 16px;
+      background: $color-black03;
+      border: none;
+      border-radius: 10px;
+      appearance: none;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      cursor: pointer;
+      outline: none;
+
+      option {
+        @include setFont(14px, 500, $color-black);
+      }
+
       @include setFont(14px, 500, $color-grey04);
-      white-space: normal;
+      color: $color-grey04;
+
+      &:not(:has(option:checked[value=""])) {
+        @include setFont(14px, 500, $color-black);
+      }
     }
+
+    // &::after {
+    //   content: "";
+    //   position: absolute;
+    //   top: 50%;
+    //   right: 14px;
+    //   transform: translateY(-50%);
+    //   width: 14px;
+    //   height: 8px;
+    //   background-image: url("../../../assets/images/icons/arrowSelect.svg");
+    //   background-size: contain;
+    //   background-repeat: no-repeat;
+    //   pointer-events: none;
+    // }
   }
 
-&__selectWrapper {
-  position: relative;
-
-  select {
-    width: 100%;
-    height: 46px;
-    padding: 12px 40px 12px 16px;
-    background: $color-black03;
-    border: none;
-    border-radius: 10px;
+  &__selectWrapper select:focus + &__inputPlaceholder,
+  &__selectWrapper select:not(:placeholder-shown) + &__inputPlaceholder {
+    opacity: 0;
+  }
+  &__consentCheckbox {
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
-    cursor: pointer;
-    outline: none;
-
-    option {
-      @include setFont(14px, 500, $color-black);
-    }
-
-    @include setFont(14px, 500, $color-grey04);
-    color: $color-grey04;
-    
-    &:not(:has(option:checked[value=""])) {
-      @include setFont(14px, 500, $color-black);
-    }     
-  }
-
-  &::after {
-    content: '';
-    position: absolute;
-    top: 50%;
-    right: 14px;
-    transform: translateY(-50%);
-    width: 14px;
-    height: 8px;
-    background-image: url("../../../assets/images/icons/arrowSelect.svg");
-    background-size: contain;
-    background-repeat: no-repeat;
-    pointer-events: none;
-  }
-}
-
- &__consentCheckbox {        
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;        
     width: 20px;
     height: 20px;
     position: relative;
     top: 4px;
     background: $color-black03;
-    border: 1px solid #E3E3E3;   
-    border-radius: 4px;     
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
     cursor: pointer;
-    margin-right: 10px;    
+    margin-right: 10px;
     transition: background-color 0.3s ease, border-color 0.3s ease;
 
-    &:checked {     
+    &:checked {
       &::after {
-        position: absolute;        
-        top: 50%; 
-        left: 50%; 
-        transform: translate(-50%, -50%);  
-        content: '\2714'; 
-        @include setFont(1Zpx, 400, $color-black);                 
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        content: "\2714";
+        @include setFont(1Zpx, 400, $color-black);
       }
     }
 
     &:focus {
-      outline: none;           
-    }  
-  } 
+      outline: none;
+    }
+  }
 
   &__consentText {
-    @include setFont(12px, 500, $color-black, $font-familySecondary);  
-  }    
+    @include setFont(12px, 500, $color-black, $font-familySecondary);
+  }
+
+  // Input
 
   &__inputWrapper {
     position: relative;
     width: 100%;
   }
 
-  &__placeholder {
+  &__inputField {
+    width: 100%;
+    height: 46px;
+    @include setFont(14px, 500, $color-black);
+    background: $color-black03;
+    border: none;
+    border-radius: 10px;
+    outline: none;
+    padding: 16px;
+    caret-color: $color-black;
+
+    &::placeholder {
+      @include setFont(14px, 500, $color-grey04);
+    }
+
+    &:not(:placeholder-shown) + .registrationMain__inputPlaceholder {
+      opacity: 0;
+      visibility: hidden;
+      transform: translateY(-4px);
+    }
+
+    &:focus + .registrationMain__inputPlaceholder {
+      opacity: 0;
+      visibility: hidden;
+      transform: translateY(-4px);
+    }
+  }
+
+  &__inputPlaceholder {
     position: absolute;
     left: 16px;
     top: 50%;
     transform: translateY(-50%);
-    color: $color-grey04;
-    transition: 0.2s ease;
     pointer-events: none;
-    font-size: 14px;
-    font-weight: 500;
+    @include setFont(14px, 500, $color-grey04);
+    transition: all 0.2s ease;
 
-    span {
-      color: $color-red;
-    }
-  }
-
-  .hide {
-    opacity: 0;
-    transform: translateY(-4px);
-    visibility: hidden;
   }
 }
