--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -11,8 +11,8 @@
 
 body {
   color: $color-black;
-  background-color: $color-white;;
-  font-family: $font-family;   
+  background-color: $color-white;
+  font-family: $font-family;
 }
 
 button,
@@ -28,83 +28,81 @@ a {
   text-decoration: none;
 }
 
-
-#root {
- // min-height: 100vh; 
-}
-
-.wrapper { 
+.wrapper {
   padding-bottom: 50px;
 }
 
 .container {
   max-width: 375px;
-  width: 100%;   
+  width: 100%;
   margin: 0 auto;
- // box-sizing:content-box;
-  
+ box-sizing:content-box;
+
   @include smScreenMedia {
-    max-width: 576px;  
-  }  
+    max-width: 576px;
+    margin: 0 auto;
+  }
 
   @include mdScreenMedia {
-    max-width: 768px;    
-  }  
+    max-width: 768px;
+    margin: 0 auto;
+  }
 }
 
-.center { 
+.center {
   text-align: center;
 }
 
 .titleh1 {
-  @include setFont(32px, 600);    
+  @include setFont(32px, 600);
 }
 
 .titleh2 {
-  @include setFont(28px, 600);   
+  @include setFont(28px, 600);
 }
 
 .titleh3 {
-  @include setFont(20px, 600);   
+  @include setFont(20px, 600);
 }
 
-.textBlueGreen{
- background: $color-blueGreen;
- -webkit-background-clip: text;
- -webkit-text-fill-color: transparent;
+.textBlueGreen {
+  background: $color-blueGreen;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
-.textGreenLightGreen{
+.textGreenLightGreen {
   background: $color-greenLightGreen;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
- }
+}
 
- .btnNextPageContainer {
+.btnNextPageContainer {
   position: fixed;
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
-  width: 100%; 
-  @include flexCol(); 
+  width: 100%;
+  @include flexCol();
   background-color: $color-white;
- // padding-top: 10px;
+  // padding-top: 10px;
   padding-bottom: 15px;
   z-index: 1;
 }
 
-.btnNextPage {   
+.btnNextPage {
   width: 100%;
-  max-width: 325px;; 
+  max-width: 325px;
   height: 52px;
-  line-height: 52px;  
-  text-align: center;   
-  @include setFont(16px, 700); 
-  background: linear-gradient(90deg, #A4F77E 0%, #A4F77D 50%, #A5F77E 100%);
-  border-radius: 100px;  
+  line-height: 52px;
+  text-align: center;
+  @include setFont(16px, 700);
+  background: linear-gradient(90deg, #a4f77e 0%, #a4f77d 50%, #a5f77e 100%);
+  border-radius: 100px;
 
-  &:hover,  &:active  {   
-    background:   linear-gradient(90deg, #6DFF60 0%, #AFE356 100%);    
+  &:hover,
+  &:active {
+    background: linear-gradient(90deg, #6dff60 0%, #afe356 100%);
     transition: $transition;
     cursor: pointer;
   }
@@ -112,24 +110,24 @@ a {
 
 // List
 
-.list {  
-  margin: 30px 0 40px; 
-   
+.list {
+  margin: 30px 0 40px;
+
   li {
-    list-style: none;         
+    list-style: none;
     position: relative;
-    @include setFont(15px, 500); 
-    margin-bottom: 12px;     
-    padding-left: 25px;  
+    @include setFont(15px, 500);
+    margin-bottom: 12px;
+    padding-left: 25px;
 
     &::before {
       content: "";
       width: 14px;
       height: 14px;
       position: absolute;
-      left: 1px;       
-      top: 3px;  
-      border-radius: 50%;     
+      left: 1px;
+      top: 3px;
+      border-radius: 50%;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -137,26 +135,30 @@ a {
 
     &::after {
       content: "";
-      width: 10px; 
+      width: 10px;
       height: 10px;
       border-radius: 50%;
-      background-color: #fff;  
+      background-color: #fff;
       position: absolute;
-      left: 3px;         
-      top: 5px; 
+      left: 3px;
+      top: 5px;
     }
   }
 }
- 
+
 .circleBlueGreen li::before {
-  background: linear-gradient(90deg, #6DFF60 0%, #56A4E3 100%);
+  background: linear-gradient(90deg, #6dff60 0%, #56a4e3 100%);
 }
 
 .circleGreen li::before {
-  background: linear-gradient(90deg, #6DFF60 0%, #AFE356 100%);
+  background: linear-gradient(90deg, #6dff60 0%, #afe356 100%);
 }
 
- .categoryHalfImg {    
+.categoryHalfImg {
   position: absolute;
   bottom: 0;
+}
+
+.redText {
+  color: $color-red;
 }
