--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -30,10 +30,7 @@ $color-blueGreen: linear-gradient(
 );
 
 $color-greenLightGreen: linear-gradient(
-  90deg,
-  #009ddf 0%,
-  #01d44a 11.17%,
-  #9dcf00 22.33%
+  90deg, #01d44a 42.17%, #9dcf00 22.33%
 );
 
 $color-red: #ff4b4b; 
