--- a/src/components/layout/Select/Select.module.scss
+++ b/src/components/layout/Select/Select.module.scss
@@ -14,15 +14,11 @@
     text-overflow: ellipsis;
     width: 100%;
     height: 46px;
-    padding: 12px 16px;
+    padding: 15px 16px;
     background: $color-black03;
     border: none;
     border-radius: 10px;
     cursor: pointer;
-
-    &:focus-within {
-      // background-color: $color-main;
-    }
   }
 
   &__dropDownBtnContent {
@@ -42,7 +38,6 @@
     }
   }
 
-
   &__arrowDownIcon {
     @include svg(14px, transparent, 8px);
     transition: $transition;
@@ -53,8 +48,7 @@
   }
 
   &__dropdownContent {
-    background: #f3f7f7;
-   // background: rgb(243 247 246);
+    background: #f3f7f7;  
     position: absolute;
     bottom: -5px;
     transform: translateY(100%);
@@ -69,10 +63,12 @@
   &__dropdownContentItems {
     max-height: 225px;
     overflow-y: auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
   
   &__dropdownItem {
-    padding: 10px 16px;
+    padding: 6px 16px;
     @include setFont(14px, 500, $color-black);
     transition: $transition;
     @include flexCol(center, flex-start);
@@ -81,10 +77,6 @@
     cursor: pointer;
     overflow: hidden;
     text-overflow: ellipsis;
-
-    &:hover {
-      // background-color: $color-main;
-    }
 
     span {
       overflow: hidden;
