--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -13,6 +13,7 @@ body {
   color: $color-black;
   background-color: $color-white;
   font-family: $font-family;
+  font-weight: 400;;
 }
 
 button,
@@ -68,16 +69,18 @@ a {
 }
 
 .btnNextPageContainer {
+  width: 100%;
+  @include flexCol(); 
+  padding-bottom: 15px;
+}
+
+.btnNextPageFixedContainer {
   position: fixed;
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
-  width: 100%;
-  @include flexCol();
-  background-color: $color-white;
-  // padding-top: 10px;
-  padding-bottom: 15px;
   z-index: 1;
+  background-color: $color-white;
 }
 
 .btnNextPage {
