--- a/src/components/AboutPage/AboutMain/AboutMain.module.scss
+++ b/src/components/AboutPage/AboutMain/AboutMain.module.scss
@@ -11,4 +11,8 @@
   background-size: contain;
   transition: $transition;
   padding: 322px 20px 0;  
+
+  &__aboutMainText {   
+    margin-top: 10px;
+  }
 }
