--- a/src/components/global/Card/Card.module.scss
+++ b/src/components/global/Card/Card.module.scss
@@ -7,7 +7,13 @@
   min-height: 310px;
   background-color: $color-white;
   border-radius: 12px;
-  box-shadow: 0px 13px 13px 0px #00000005;
+  box-shadow: 
+  0px 3px 7px rgba(0, 0, 0, 0.02),
+  0px 13px 13px rgba(0, 0, 0, 0.02),
+  0px 30px 18px rgba(0, 0, 0, 0.01),
+  0px 53px 21px rgba(0, 0, 0, 0),
+  0px 83px 23px rgba(0, 0, 0, 0);
+
   padding-top: 6px;
   padding-bottom: 8px;
 
